kubelabs/networkPolicy/demo/deny_all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: np-lab
spec:
  podSelector:
    matchLabels:
      app: webapp
  policyTypes:
  - Ingress
